# progra3-epics

./: CMakeLists.txt  README.md  README_EPIC1.md  README_EPIC2.md
epic1/: tensor.h  tests_epic1.cpp
epic1/tests/question_1/test_1/: test.yml  test_1.cpp
epic1/tests/question_1/test_2/: question_1_test_2.in  test.yml  test_2.cpp
epic1/tests/question_1/test_3/: question_1_test_3.in  test.yml  test_3.cpp
epic1/tests/question_1/test_4/: question_1_test_4.in  test.yml  test_4.cpp
epic1/tests/question_2/test_1/: question_2_test_1.in  test.yml  test_1.cpp
epic1/tests/question_2/test_2/: test.yml  test_2.cpp
epic1/tests/question_2/test_3/: question_2_test_3.in  test.yml  test_3.cpp
epic1/tests/question_2/test_4/: question_2_test_4.in  test.yml  test_4.cpp
epic1/tests/question_3/test_1/: question_3_test_1.in  test.yml  test_1.cpp
epic1/tests/question_3/test_2/: question_3_test_2.in  test.yml  test_2.cpp
epic1/tests/question_3/test_3/: question_3_test_3.in  test.yml  test_3.cpp
epic1/tests/question_3/test_4/: question_3_test_4.in  test.yml  test_4.cpp
epic1/tests/question_4/test_1/: question_4_test_1.in  test.yml  test_1.cpp
epic1/tests/question_4/test_2/: test.yml  test_2.cpp
epic1/tests/question_4/test_3/: question_4_test_3.in  test.yml  test_3.cpp
epic1/tests/question_4/test_4/: question_4_test_4.in  test.yml  test_4.cpp
epic1/tests/question_5/test_1/: test.yml  (+2 more)
epic2/: activation.h  dense.h  layer.h  loss.h  neural_network.cpp  neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h  tests_epic2.cpp
(+33 files in other folders)
